[SPv2] Don't paint invisible PaintLayers with transform animations.

Only an effect animation can cause the PaintLayer to become visible via compositor
thread updates.

BUG=700176,692310

Review-Url: https://codereview.chromium.org/2770763002
Cr-Commit-Position: refs/heads/master@{#458875}

Former-commit-id: 8951c6c53fdbf06bd999541965c86da70a7999ca